--- a/index.html
+++ b/index.html
@@ -4,27 +4,33 @@
   <meta charset="UTF-8" />
   <title>Signup</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; }
-    form { max-width: 300px; }
-    label { display: block; margin-top: 15px; }
-    input { width: 100%; padding: 8px; margin-top: 5px; }
-    button { margin-top: 20px; padding: 10px 20px; }
-    #message { color: red; margin-top: 10px; }
+    body { font-family: Arial, sans-serif; max-width: 400px; margin: 40px auto; }
+    h1 { text-align: center; }
+    form { display: flex; flex-direction: column; }
+    label { margin-top: 15px; }
+    input { padding: 8px; }
+    button { margin-top: 25px; padding: 12px; background: #4CAF50; color: white; border: none; cursor: pointer; }
+    button:hover { background: #45a049; }
+    #message { color: red; margin-top: 15px; text-align: center; }
+    a { display: block; margin-top: 20px; text-align: center; }
   </style>
 </head>
 <body>
   <h1>Create Account</h1>
   <form id="signupForm">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required />
+    <label>Email:</label>
+    <input type="email" id="email" required />
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required minlength="6" />
+    <label>Password:</label>
+    <input type="password" id="password" required minlength="6" />
+
+    <label>Confirm Password:</label>
+    <input type="password" id="confirmPassword" required minlength="6" />
 
     <button type="submit">Signup</button>
     <p id="message"></p>
   </form>
-  <p>Already have an account? <a href="login.html">Login here</a></p>
+  <a href="login.html">Already have an account? Login here</a>
 
   <script>
     const signupForm = document.getElementById('signupForm');
@@ -32,16 +38,30 @@
       e.preventDefault();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
+      const confirmPassword = document.getElementById('confirmPassword').value.trim();
 
-      if (!email || !password) {
-        document.getElementById('message').innerText = 'Please fill all fields.';
+      const message = document.getElementById('message');
+      message.innerText = '';
+
+      if (!email || !password || !confirmPassword) {
+        message.innerText = 'All fields are required.';
+        return;
+      }
+
+      if (password.length < 6) {
+        message.innerText = 'Password must be at least 6 characters.';
+        return;
+      }
+
+      if (password !== confirmPassword) {
+        message.innerText = 'Passwords do not match.';
         return;
       }
 
       if (localStorage.getItem(email)) {
-        document.getElementById('message').innerText = 'Account already exists!';
+        message.innerText = 'Account already exists!';
       } else {
-        localStorage.setItem(email, password); // For real apps, NEVER store raw passwords!
+        localStorage.setItem(email, password);
         alert('Signup successful! Please login.');
         window.location.href = 'login.html';
       }
